fix: adjustments for running the tests in h2.